--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,15 +12,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "15"
-          
+
       - name: Install
         run: npm install
 
       - name: Linter
         run: npm run lint
 
-      - name: Formatter
-        run: npm run prettier
+      - uses: actionsx/prettier@v2
+        with:
+          args: --check ./src
 
       - name: Test
         run: CI=true npm run test
