--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,16 +1,12 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
-  name: ingress-wildcard-host
+  name: app-service
 spec:
-  rules:
-  - host: "foo.bar.com"
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/bar"
-        backend:
-          service:
-            name: service1
-            port:
-              number: 80
+  selector: 
+     app: app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  
